Address PR review feedback
Applied via /muse:implement (direct mode):
- DC-08/DC-19: Remove duplicate -v flag and empty-string arg from RuntimeTest.java runBTrace helpers
- DC-10/DC-11: Fix confusing legacy JAR note in docs (substitute → replace with legacy jar names)
- DC-12: Fix broken link in docs/README.md (ExtensionInvokeDynamicBridge.md) + standardize link casing
- DC-13/DC-14: Fix BOOT_ADDED/SYSTEM_ADDED ordering — add to set AFTER successful append to prevent stale state on failure
- DC-15: Null-safe classloader in loadEmbeddedProbe (bootstrap classloader guard)
- DC-16: Normalize null resourceLoader in ClassDataLoader constructor to system classloader
- DC-17: Replace List.of() with Collections.singletonList() for Java 8 compatibility
- DC-18: Use rootProject.version in btrace-maven-plugin/build.gradle

DC-01/02/03/04/05/06/07 were already resolved in the branch.
DC-09 deferred (removing sleep risks test flakiness without a concrete condition mechanism).

<!-- muse-session:impl-20260417-225428 -->

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>